fixed overflow scenario for tables

--- a/app/assets/stylesheets/common.css
+++ b/app/assets/stylesheets/common.css
@@ -23,6 +23,11 @@
     border-spacing: 0 15px;
 }
 
+.table-overflow {
+    height: 70%;
+    overflow: auto;
+}
+
 div.actions {
     display: flex;
     flex-direction: row-reverse;
